# calife-rs

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  config.rs  lib.rs  macros.rs  main.rs  subr.rs  version.rs
testdata/: calife.auth
tests/: cli-opts.rs
