[package]
name = "calife-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
description = "Calife rewritten in Rust."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "calife"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.66"
clap = { version = "4", features = ["cargo", "derive"] }
home = "0.5.4"
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
stderrlog = "0.5.4"
user = "0.1.1"

[dev-dependencies]
assert_cmd = { version = "2.0.6", features = ["color"] }
rstest = "0.15.0"
